--- a/training/agenda_lists/bower.json
+++ b/training/agenda_lists/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "agenda",
+  "name": "agenda_lists",
   "authors": [
     "Andrés Reyes Navas <andres.reyes@sngular.team>"
   ],
@@ -23,6 +23,8 @@
     "iron-icon": "PolymerElements/iron-icon#^1.0.8",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "paper-input": "PolymerElements/paper-input#^1.1.10",
-    "web-component-tester": "Polymer/web-component-tester#^4.2.2"
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7",
+    "iron-image": "PolymerElements/iron-image#^1.2.3"
   }
 }
